[gd_scene load_steps=8 format=3 uid="uid://devm2geibslsw"]

[ext_resource type="Script" path="res://scripts/user_interface/builder_save.gd" id="1_bggib"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="2_q3qhm"]
[ext_resource type="StyleBox" uid="uid://byr8amhnwal4k" path="res://assets/resources/themes/panel.tres" id="2_qhpg7"]
[ext_resource type="Theme" uid="uid://dujdfelccpvvo" path="res://assets/resources/themes/primary.tres" id="4_a08wn"]
[ext_resource type="Texture2D" uid="uid://hs4xs472vpsw" path="res://assets/ui/save_icon.png" id="8_t1bnt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r00fw"]
bg_color = Color(0.525415, 0.683337, 0.522033, 0.454902)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ud3al"]
load_path = "res://.godot/imported/save_icon.png-bb729b418ac7c5fcd58f67cd4ad6fc4c.ctex"

[node name="SaveQuery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bggib")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_q3qhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_r00fw")

[node name="Panel" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -250.0
offset_right = 275.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_qhpg7")

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 20

[node name="LevelName" type="LineEdit" parent="Background/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_q3qhm")
placeholder_text = "Level name"
alignment = 1
max_length = 15
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Moves" type="LineEdit" parent="Background/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_q3qhm")
placeholder_text = "Moves"
alignment = 1
max_length = 2
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Controls" type="HBoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 20
alignment = 2

[node name="PersistBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer2/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 5
focus_mode = 0
theme = ExtResource("2_q3qhm")
theme_override_colors/icon_normal_color = Color(0.784314, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.784314, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0, 0, 1)
icon = SubResource("CompressedTexture2D_ud3al")
flat = true

[node name="SaveBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer2/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
focus_mode = 0
theme = ExtResource("4_a08wn")
theme_override_constants/icon_max_width = 92
text = " Save "
icon = ExtResource("8_t1bnt")
icon_alignment = 2

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="text_changed" from="Background/Panel/MarginContainer/VBoxContainer2/VBoxContainer/LevelName" to="." method="_on_level_name_text_changed"]
[connection signal="text_changed" from="Background/Panel/MarginContainer/VBoxContainer2/VBoxContainer/Moves" to="." method="_on_moves_text_changed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer2/Controls/PersistBtn" to="." method="_on_persist_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer2/Controls/SaveBtn" to="." method="_on_save_btn_pressed"]
